<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textSize="100sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="40dp">

            <Button
                android:id="@+id/quickStartBtn"
                style="@style/mainActionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_play_arrow_24"
                android:text="@string/quick_start" />

            <Button
                android:id="@+id/categorySelectionBtn"
                style="@style/mainActionBtn.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_widgets_24"
                android:text="@string/quiz_selection" />

            <Button
                android:id="@+id/createBtn"
                style="@style/mainActionBtn.Tertiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_build_24"
                android:text="@string/create" />

            <Button
                android:id="@+id/settingsBtn"
                style="@style/mainActionBtn.Alt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_settings_24"
                android:text="@string/settings" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>